[package]
name = "merkle-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-poseidon = {version = "0.34.0"}
dusk-bls12_381 ={ version = "0.13.0"}
dusk-bytes = {version = "0.1.7"}
hex = "0.4.2"